--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
-name                = MooX-ShortHas
+name                = MooseX-ShortHas
 author              = Christian Walde <walde.christian@gmail.com>
 copyright_holder    = Christian Walde
-copyright_year      = 2017
+copyright_year      = 2022
 license             = CC0_1_0
 
 [@MITHALDU]
